@@ -28,7 +28,7 @@ $EM_CONF[$_EXTKEY] = array(
 	'clearcacheonload' => 0,
 	'lockType' => '',
 	'author' => 'Moreno Feltscher',
-	'author_email' => 'moreno@feltscher.ch',
+	'author_email' => 'moreno@luagsh.ch',
 	'author_company' => '',
 	'CGLcompliance' => '',
 	'CGLcompliance_note' => '',
