@@ -1,3 +1,7 @@
+2010-01-04  Moreno Feltscher  <moreno@luagsh.ch>
+
+	* Code cleanup (updated documentation inside code and fixed copyright information)
+
 2009-12-31  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Updated documentation (new official template, reworked content)
